--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<title>Urban Solar – Chania (Stable Version)</title>
+<title>Solar Potential – Greece (Vector Tile Version)</title>
 
 <script src="https://unpkg.com/maplibre-gl@3.6.1/dist/maplibre-gl.js"></script>
 <link href="https://unpkg.com/maplibre-gl@3.6.1/dist/maplibre-gl.css" rel="stylesheet"/>
-
 <script src="https://unpkg.com/deck.gl@8.9.34/dist.min.js"></script>
 
 <style>
@@ -24,8 +23,8 @@ body { margin:0; overflow:hidden; background:#000; font-family:system-ui; }
 }
 
 #legend { bottom:20px; left:20px; width:240px; }
-h3 { margin:0 0 6px 0; color:#fff; font-size:14px; }
 
+h3 { margin:0 0 6px 0; color:#fff; font-size:14px; }
 .legend-item { margin:4px 0; }
 .legend-color {
   display:inline-block;
@@ -46,24 +45,44 @@ h3 { margin:0 0 6px 0; color:#fff; font-size:14px; }
     <span class="legend-color" style="background:#ff7800;"></span> > 1800
   </div>
   <div class="legend-item">
-    <span class="legend-color" style="background:#ffb000;"></span> 1700–1800
+    <span class="legend-color" style="background:#ffb000;"></span> 1600–1800
   </div>
   <div class="legend-item">
-    <span class="legend-color" style="background:#ffe680;"></span> < 1700
+    <span class="legend-color" style="background:#ffe680;"></span> < 1600
   </div>
 </div>
 
 <script>
 
 // -----------------------------------------------------------------------------
-// Map Setup
+// Map Setup – Greece-wide
 // -----------------------------------------------------------------------------
 
 const map = new maplibregl.Map({
   container: 'map',
-  style: 'https://basemaps.cartocdn.com/gl/dark-matter-gl-style/style.json',
-  center: [24.018, 35.513],
-  zoom: 15,
+  style: {
+    version: 8,
+    sources: {
+      osm: {
+        type: 'raster',
+        tiles: ['https://a.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png'],
+        tileSize: 256
+      },
+      buildings: {
+        type: 'vector',
+        tiles: ['https://tiles.openmaptiles.org/tiles/v3/{z}/{x}/{y}.pbf']
+      }
+    },
+    layers: [
+      {
+        id: 'osm-base',
+        type: 'raster',
+        source: 'osm'
+      }
+    ]
+  },
+  center: [22.5, 39.0],
+  zoom: 6.2,
   pitch: 60,
   bearing: -20,
   antialias: true
@@ -72,19 +91,46 @@ const map = new maplibregl.Map({
 map.addControl(new maplibregl.NavigationControl());
 
 // -----------------------------------------------------------------------------
-// Generate Solar Surface
+// Add 3D Buildings (Vector Tile Source)
+// -----------------------------------------------------------------------------
+
+map.on('load', () => {
+
+  map.addLayer({
+    id: '3d-buildings',
+    type: 'fill-extrusion',
+    source: 'buildings',
+    'source-layer': 'building',
+    minzoom: 14,
+    paint: {
+      'fill-extrusion-color': '#666',
+      'fill-extrusion-height': [
+        'coalesce',
+        ['get', 'height'],
+        ['*', ['get', 'levels'], 3],
+        6
+      ],
+      'fill-extrusion-base': 0,
+      'fill-extrusion-opacity': 0.9
+    }
+  });
+
+});
+
+// -----------------------------------------------------------------------------
+// Solar Surface (Greece-scale synthetic demo)
 // -----------------------------------------------------------------------------
 
 function generateSolarSurface() {
   const features = [];
-  const step = 0.002;
+  const step = 0.25;  // large grid for country scale
 
-  for (let lon = 23.99; lon <= 24.05; lon += step) {
-    for (let lat = 35.49; lat <= 35.54; lat += step) {
+  for (let lon = 19; lon <= 28; lon += step) {
+    for (let lat = 34; lat <= 42; lat += step) {
 
-      const base = 1700;
-      const gradient = (35.54 - lat) * 200;
-      const value = base + gradient + Math.random() * 40;
+      const base = 1500;
+      const southBoost = (42 - lat) * 50;
+      const value = base + southBoost + Math.random() * 50;
 
       const poly = [
         [lon, lat],
@@ -107,74 +153,9 @@ function generateSolarSurface() {
 
 const solarGeoJSON = generateSolarSurface();
 
-// -----------------------------------------------------------------------------
-// Load OSM Buildings via Overpass
-// -----------------------------------------------------------------------------
-
-async function loadBuildings() {
-
-  const query = `
-  [out:json][timeout:25];
-  (
-    way["building"](35.49,23.99,35.54,24.05);
-  );
-  out body;
-  >;
-  out skel qt;
-  `;
-
-  const response = await fetch(
-    "https://overpass-api.de/api/interpreter",
-    {
-      method: "POST",
-      body: query
-    }
-  );
-
-  const data = await response.json();
-
-  const nodes = {};
-  data.elements.forEach(el => {
-    if (el.type === "node") nodes[el.id] = [el.lon, el.lat];
-  });
-
-  const features = [];
-
-  data.elements.forEach(el => {
-    if (el.type === "way" && el.nodes) {
-      const coords = el.nodes.map(id => nodes[id]).filter(Boolean);
-      if (coords.length > 3) {
-        features.push({
-          type: "Feature",
-          properties: {
-            levels: el.tags?.["building:levels"]
-              ? parseInt(el.tags["building:levels"])
-              : 2
-          },
-          geometry: {
-            type: "Polygon",
-            coordinates: [coords]
-          }
-        });
-      }
-    }
-  });
-
-  return {
-    type: "FeatureCollection",
-    features
-  };
-}
-
-// -----------------------------------------------------------------------------
-// Deck Layers
-// -----------------------------------------------------------------------------
-
 let overlay = null;
 
-async function initLayers() {
-
-  const buildings = await loadBuildings();
+map.on('load', () => {
 
   const solarLayer = new deck.GeoJsonLayer({
     id: 'solar',
@@ -183,31 +164,20 @@ async function initLayers() {
     stroked: false,
     getFillColor: d => {
       const v = d.properties.solar;
-      if (v > 1800) return [255,120,0,180];
-      if (v > 1700) return [255,176,0,160];
-      return [255,230,120,140];
+      if (v > 1800) return [255,120,0,160];
+      if (v > 1600) return [255,176,0,140];
+      return [255,230,120,120];
     }
   });
 
-  const buildingLayer = new deck.GeoJsonLayer({
-    id: 'buildings',
-    data: buildings,
-    extruded: true,
-    wireframe: false,
-    filled: true,
-    getElevation: d => d.properties.levels * 3,
-    getFillColor: [100,100,100,200]
-  });
-
   overlay = new deck.MapboxOverlay({
-    layers: [solarLayer, buildingLayer]
+    layers: [solarLayer]
   });
 
   map.addControl(overlay);
-}
-
-map.on('load', initLayers);
+});
 
 </script>
+
 </body>
 </html>
