--- a/index.html
+++ b/index.html
@@ -1,50 +1,3 @@
-<!doctype html>
-<html lang="en">
-<head>
-<meta charset="utf-8" />
-<title>Solar Potential – Greece (Clean Build)</title>
-
-<script src="https://unpkg.com/maplibre-gl@3.6.1/dist/maplibre-gl.js"></script>
-<link href="https://unpkg.com/maplibre-gl@3.6.1/dist/maplibre-gl.css" rel="stylesheet"/>
-<script src="https://unpkg.com/deck.gl@8.9.34/dist.min.js"></script>
-
-<style>
-body { margin:0; overflow:hidden; background:#000; font-family:system-ui; }
-#map { width:100vw; height:100vh; }
-
-.panel {
-  position:absolute;
-  background:rgba(15,15,15,0.95);
-  color:#ddd;
-  padding:14px;
-  border-radius:4px;
-  font-size:13px;
-  z-index:10;
-}
-
-#legend { bottom:20px; left:20px; width:260px; }
-
-.legend-gradient {
-  height:14px;
-  background: linear-gradient(to right, #1e90ff, #ffff00, #ff4500);
-  margin:10px 0;
-  border-radius:3px;
-}
-
-h3 { margin:0 0 6px 0; color:#fff; font-size:15px; }
-</style>
-</head>
-
-<body>
-
-<div id="map"></div>
-
-<div id="legend" class="panel">
-  <h3>Solar Irradiation (Demo)</h3>
-  <div class="legend-gradient"></div>
-  <div>Low → High</div>
-</div>
-
 <script>
 
 const MAPTILER_KEY = "fmHz7ZycUzBddOZvkGZO";
@@ -64,11 +17,10 @@ map.addControl(new maplibregl.NavigationControl());
 map.on('load', () => {
 
   // ------------------------------------------------------------
-  // REMOVE DEFAULT BUILDING LAYERS (IMPORTANT)
+  // REMOVE DEFAULT BUILDING LAYERS
   // ------------------------------------------------------------
 
   const layers = map.getStyle().layers;
-
   layers.forEach(layer => {
     if (layer['source-layer'] === 'building') {
       map.removeLayer(layer.id);
@@ -76,7 +28,7 @@ map.on('load', () => {
   });
 
   // ------------------------------------------------------------
-  // ADD OUR OWN 3D BUILDINGS (HIGH CONTRAST)
+  // ADD CLEAN 3D BUILDINGS
   // ------------------------------------------------------------
 
   map.addLayer({
@@ -87,22 +39,15 @@ map.on('load', () => {
     minzoom: 13,
     paint: {
       'fill-extrusion-color': '#ffffff',
-
       'fill-extrusion-height': [
         'case',
         ['has', 'height'], ['get', 'height'],
         ['has', 'levels'], ['*', ['get', 'levels'], 5],
         25
       ],
-
-      'fill-extrusion-base': 0,
       'fill-extrusion-opacity': 0.95
     }
   });
-
-  // ------------------------------------------------------------
-  // STRONG LIGHTING
-  // ------------------------------------------------------------
 
   map.setLight({
     anchor: 'viewport',
@@ -112,28 +57,24 @@ map.on('load', () => {
   });
 
   // ------------------------------------------------------------
-  // SOLAR SURFACE (VISIBLE GRID USING DECK.GL)
+  // SOLAR HEATMAP (SMOOTH SURFACE)
   // ------------------------------------------------------------
 
-  const solarData = generateSolarSurface();
+  const solarPoints = generateSolarPoints();
 
-  const solarLayer = new deck.GeoJsonLayer({
-    id: 'solar-layer',
-    data: solarData,
-    filled: true,
-    stroked: false,
-    opacity: 0.6,
-    getFillColor: d => {
-      const v = d.properties.solar;
-
-      if (v > 1900) return [255, 69, 0, 200];
-      if (v > 1750) return [255, 215, 0, 180];
-      return [30, 144, 255, 150];
-    }
+  const heatmapLayer = new deck.HeatmapLayer({
+    id: 'solar-heatmap',
+    data: solarPoints,
+    getPosition: d => [d.lon, d.lat],
+    getWeight: d => d.value,
+    radiusPixels: 60,
+    intensity: 1,
+    threshold: 0.05,
+    aggregation: 'MEAN'
   });
 
   const overlay = new deck.MapboxOverlay({
-    layers: [solarLayer]
+    layers: [heatmapLayer]
   });
 
   map.addControl(overlay);
@@ -141,14 +82,14 @@ map.on('load', () => {
 });
 
 // ------------------------------------------------------------
-// Synthetic Solar Grid (CLEARLY VISIBLE)
+// GENERATE SOLAR POINT FIELD
 // ------------------------------------------------------------
 
-function generateSolarSurface() {
+function generateSolarPoints() {
 
-  const features = [];
-  const step = 0.5;
+  const points = [];
 
+  const step = 0.2;   // resolution
   for (let lon = 19; lon <= 28; lon += step) {
     for (let lat = 34; lat <= 42; lat += step) {
 
@@ -156,28 +97,15 @@ function generateSolarSurface() {
       const southBoost = (42 - lat) * 80;
       const value = base + southBoost;
 
-      const poly = [
-        [lon, lat],
-        [lon + step, lat],
-        [lon + step, lat + step],
-        [lon, lat + step],
-        [lon, lat]
-      ];
-
-      features.push({
-        type: "Feature",
-        properties: { solar: value },
-        geometry: {
-          type: "Polygon",
-          coordinates: [poly]
-        }
+      points.push({
+        lon: lon,
+        lat: lat,
+        value: value
       });
     }
   }
 
-  return { type: "FeatureCollection", features };
+  return points;
 }
 
 </script>
-</body>
-</html>
